# imagenet-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  convert_images.py  download.py  download.sh  gen_list.py  gen_urls.py  pyproject.toml  requirements.txt  resize_images.py  setup.cfg
