[tool.poetry]
name = "imagenet-downloader"
version = "0.1.0"
description = ""
authors = ["xkumiyu <xkumiyu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
pandas = "^1.2.0"
tqdm = "^4.55.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
